// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerHandle renders DrawerHandle with all props 1`] = `
<Fragment>
  <Button
    block={false}
    className="mt3"
    data-test-id="handle-button"
    ghost={false}
    htmlType="button"
    loading={false}
    onClick={[Function]}
  >
    Handle
  </Button>
  <withConfigConsumer(Drawer)
    onClose={[Function]}
    placement="left"
    title="Title"
    visible={false}
    width={256}
  >
    <div>
      Content
    </div>
  </withConfigConsumer(Drawer)>
</Fragment>
`;

exports[`DrawerHandle renders DrawerHandle with default props 1`] = `
<Fragment>
  <Button
    block={false}
    className=""
    data-test-id="handle-button"
    ghost={false}
    htmlType="button"
    loading={false}
    onClick={[Function]}
  >
    Open
  </Button>
  <withConfigConsumer(Drawer)
    onClose={[Function]}
    placement="left"
    title="Title"
    visible={false}
    width={304}
  >
    <div>
      Content
    </div>
  </withConfigConsumer(Drawer)>
</Fragment>
`;
